docs/api/qiskit-ibm-runtime/0.47/options-models-post-selection-options.mdx
---
title: PostSelectionOptions (v0.47)
description: API reference for qiskit_ibm_runtime.options_models.PostSelectionOptions in qiskit-ibm-runtime v0.47
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options_models.PostSelectionOptions
---

# PostSelectionOptions

<Class id="qiskit_ibm_runtime.options_models.PostSelectionOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/options_models/post_selection_options.py#L25-L62" signature="PostSelectionOptions(enable=False, x_pulse_type='xslow', strategy='node')" modifiers="class">
  Bases: `object`

  Options for post selecting results.

  ## Attributes

  **Parameters**

  *   **enable** (*bool*)
  *   **x\_pulse\_type** (*Literal\['xslow', 'rx']*)
  *   **strategy** (*Literal\['node', 'edge']*)

  ### enable

  <Attribute id="qiskit_ibm_runtime.options_models.PostSelectionOptions.enable" attributeTypeHint="bool" attributeValue="False">
    Whether to enable Post Selection when performing learning experiments.

    If `True`, Post Selection is applied to all the learning circuits. In particular, the following steps are undertaken:

    *   **Using the passes in**

        `qiskit_addon_utils.noise_management.post_selection.transpiler.passes`, the learning circuits are modified by adding measurements on the spectator qubits, as well as post selection measurements.

    *   **The results of each individual learning circuits are post selected by discarding the shots**

        where one or more bits failed to flip, as explained in the docstring of `qiskit_addon_utils.noise_management.post_selection.PostSelector.compute_mask()`.

    If `False`, all the other Post Selection options will be ignored.
  </Attribute>

  ### strategy

  <Attribute id="qiskit_ibm_runtime.options_models.PostSelectionOptions.strategy" attributeTypeHint="Literal['node', 'edge']" attributeValue="'node'">
    The strategy used to decide if a shot should be kept or discarded.

    The available startegies are:

    *   `'node'`: Discard every shot where one or more bits failed to flip. Keep every other shot.

    *   **`'edge'`: Discard every shot where there exists a pair of neighbouring qubits for which**

        both of the bits failed to flip. Keep every other shot.

    See the dosctrings of `PostSelector` and `PostSelector.compute_mask()` for more details.

    Defaults to `node`.
  </Attribute>

  ### x\_pulse\_type

  <Attribute id="qiskit_ibm_runtime.options_models.PostSelectionOptions.x_pulse_type" attributeTypeHint="Literal['xslow', 'rx']" attributeValue="'xslow'">
    The type of the X-pulse used for the post selection measurements.
  </Attribute>

  ## Methods
</Class>

