docs/api/qiskit-ibm-runtime/0.49/options-models-post-selection-options.mdx
---
title: PostSelectionOptions (v0.49)
description: API reference for qiskit_ibm_runtime.options_models.PostSelectionOptions in qiskit-ibm-runtime v0.49
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options_models.PostSelectionOptions
---

<span id="qiskit-ibm-runtime-options-models-postselectionoptions" />

# qiskit\_ibm\_runtime.options\_models.PostSelectionOptions

<Class id="qiskit_ibm_runtime.options_models.PostSelectionOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.49/qiskit_ibm_runtime/options_models/post_selection.py#L35-L69" signature="PostSelectionOptions" modifiers="pydantic model">
  Bases: `BaseOptionsModel`

  Options for post selecting results.

  **Config**

  *   **validate\_assignment**: *bool = True*
  *   **extra**: *str = forbid*

  ### enable

  <Attribute id="qiskit_ibm_runtime.options_models.PostSelectionOptions.enable" modifiers="field">
    Type: `Annotated`\[`bool`, `AfterValidator`(`func``=``_warn_post_selection`)]

    Default value: `False`

    Whether to enable Post Selection when performing learning experiments.

    If `True`, Post Selection is applied to all the learning circuits. In particular, the following steps are undertaken:

    *   **Using the passes in**

        `qiskit_addon_utils.noise_management.post_selection.transpiler.passes`, the learning circuits are modified by adding measurements on the spectator qubits, as well as post selection measurements.

    *   **The results of each individual learning circuits are post selected by discarding the shots**

        where one or more bits failed to flip, as explained in the docstring of `qiskit_addon_utils.noise_management.post_selection.PostSelector.compute_mask()`.

    If `False`, all the other Post Selection options will be ignored.

    **Constraints**

    *   **func** = \<function \_warn\_post\_selection at 0x7f3431e82170>
  </Attribute>

  ### strategy

  <Attribute id="qiskit_ibm_runtime.options_models.PostSelectionOptions.strategy" modifiers="field">
    Type: `Literal`\[`'node'`, `'edge'`]

    Default value: `'node'`

    The strategy used to decide if a shot should be kept or discarded.

    The available startegies are:

    *   `'node'`: Discard every shot where one or more bits failed to flip. Keep every other shot.

    *   **`'edge'`: Discard every shot where there exists a pair of neighbouring qubits for which**

        both of the bits failed to flip. Keep every other shot.

    See the dosctrings of `PostSelector` and `PostSelector.compute_mask()` for more details.
  </Attribute>

  ### x\_pulse\_type

  <Attribute id="qiskit_ibm_runtime.options_models.PostSelectionOptions.x_pulse_type" modifiers="field">
    Type: `Literal`\[`'xslow'`, `'rx'`]

    Default value: `'xslow'`

    The type of the X-pulse used for the post selection measurements.
  </Attribute>

  ### update

  <Function id="qiskit_ibm_runtime.options_models.PostSelectionOptions.update" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.49/qiskit_ibm_runtime/options_models/base.py#L46-L54" signature="update(**kwargs)">
    Update the options.

    **Parameters**

    **kwargs** (*Any*)

    **Return type**

    None
  </Function>
</Class>

